--- a/src/styles/tailwind.css
+++ b/src/styles/tailwind.css
@@ -15,9 +15,12 @@
 
 @tailwind preflight;
 
-/* TODO: add custom reset styles here */
+/* TODO: add/import any custom reset styles here */
 
-/* TODO: add third party styles here? */
+/* TODO: when postCSS is working, import and customize third party styles here */
+/* @import '../../node_modules/slick-carousel/slick/slick.css';
+@import '../../node_modules/slick-carousel/slick/slick-theme.css'; */
+
 .slick-slide {
   border: solid 5px red;
 }
@@ -38,7 +41,7 @@
   * @import "components/forms";
   */
 
-/* TODO: add custom component classes here (using @apply class clusters) */
+/* TODO: add/import custom component classes here (using @apply class clusters) */
 
 /**
   * This injects all of Tailwind's utility classes, generated based on your
@@ -68,4 +71,4 @@
   * @import "utilities/skew-transforms";
   */
 
-/* TODO: add custom utility classes here */
+/* TODO: add/import custom utility classes here */
