--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,17 +1,4 @@
-/**
- * This injects Tailwind's base styles, which is a combination of
- * Normalize.css and some additional base styles.
- *
- * You can see the styles here:
- * https://github.com/tailwindcss/tailwindcss/blob/master/css/preflight.css
- *
- * If using `postcss-import`, you should import this line from it's own file:
- *
- * @import "./tailwind-preflight.css";
- *
- * See: https://github.com/tailwindcss/tailwindcss/issues/53#issuecomment-341413622
- */
-/* @import './tailwind-preflight.css'; */
+/* Reset styles */
 
 /*! normalize.css v7.0.0 | MIT License | github.com/necolas/normalize.css */
 
@@ -590,45 +577,19 @@ button,
   cursor: pointer;
 }
 
-/* TODO: add/import any custom reset styles here */
+/* Plugin styles */
 
-/* TODO: when postCSS is working, import and customize third party styles here */
-/* @import '../../node_modules/slick-carousel/slick/slick.css';
-@import '../../node_modules/slick-carousel/slick/slick-theme.css'; */
+@import 'plugins/react-id-swiper';
+@import 'plugins/react-simple-chat';
+@import 'plugins/react-slick';
 
-.slick-slide {
-  border: solid 5px red;
-}
+/* Component classes */
 
-/**
-  * Here you would add any of your custom component classes; stuff that you'd
-  * want loaded *before* the utilities so that the utilities could still
-  * override them.
-  *
-  * Example:
-  *
-  * .btn { ... }
-  * .form-input { ... }
-  *
-  * Or if using a preprocessor or `postcss-import`:
-  *
-  * @import "components/buttons";
-  * @import "components/forms";
-  */
+/* @import "components/buttons"
+   @import "components/forms" */
 
-/* TODO: add/import custom component classes here (using @apply class clusters) */
+/* Utility classes */
 
-/**
-  * This injects all of Tailwind's utility classes, generated based on your
-  * config file.
-  *
-  * If using `postcss-import`, you should import this line from it's own file:
-  *
-  * @import "./tailwind-utilities.css";
-  *
-  * See: https://github.com/tailwindcss/tailwindcss/issues/53#issuecomment-341413622
-  */
-/* @import './tailwind-utilities.css'; */
 .container {
   width: 100%;
 }
@@ -4869,23 +4830,12 @@ button,
 .z-auto {
   z-index: auto;
 }
+/* @import "utilities/background-patterns"
+   @import "utilities/skew-transforms" */
 
-/**
-  * Here you would add any custom utilities you need that don't come out of the
-  * box with Tailwind.
-  *
-  * Example :
-  *
-  * .bg-pattern-graph-paper { ... }
-  * .skew-45 { ... }
-  *
-  * Or if using a preprocessor or `postcss-import`:
-  *
-  * @import "utilities/background-patterns";
-  * @import "utilities/skew-transforms";
-  */
+/* Override classes */
 
-/* TODO: add/import custom utility classes here */
+@import 'supports/grid';
 
 @media (min-width: 36em) {
   .sm\:list-reset {
