--- a/src/styles/tailwind.scss
+++ b/src/styles/tailwind.scss
@@ -1,24 +1,45 @@
-/* Reset styles */
+/* 
+
+Reset styles 
+
+*/
 
 @tailwind preflight;
+@import 'reset/reset';
 
-/* Plugin styles */
+/* 
+
+Plugin styles 
+
+*/
 
 @import 'plugins/react-id-swiper';
 @import 'plugins/react-simple-chat';
 @import 'plugins/react-slick';
 
-/* Component classes */
+/* 
+
+Component classes 
+
+*/
 
 /* @import "components/buttons"
    @import "components/forms" */
 
-/* Utility classes */
+/* 
+
+Utility classes 
+
+*/
 
 @tailwind utilities;
 /* @import "utilities/background-patterns"
    @import "utilities/skew-transforms" */
 
-/* Override classes */
+/* 
+
+Override classes 
+
+*/
 
 @import 'supports/grid';
