--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -40,10 +40,10 @@
 // @import 'utilities/multi-column'
 // @import 'utilities/overflow'
 @import 'utilities/positioning'
-// @import 'utilities/shadows'
+@import 'utilities/shadows'
 @import 'utilities/sizing'
 // @import 'utilities/spacing'
-// @import 'utilities/typography'
+@import 'utilities/typography'
 
 /* 
  *
