--- a/src/styles/reset/_reset.sass
+++ b/src/styles/reset/_reset.sass
@@ -23,6 +23,10 @@ html,
 body
   min-height: 100vh
 
+  // Font-size
+  @media (min-width: 36em)
+    font-size: 1.05rem
+
   // Font-smoothing
   -webkit-font-smoothing: antialiased
   -moz-osx-font-smoothing: grayscale
