--- a/src/styles/builds/after-postcss/main.css
+++ b/src/styles/builds/after-postcss/main.css
@@ -526,6 +526,13 @@ body {
   -moz-font-feature-settings: "liga" on;
 }
 
+@media (min-width: 36em) {
+  html,
+  body {
+    font-size: 1.05rem;
+  }
+}
+
 /*
  *
  * 2. Images
@@ -789,42 +796,9 @@ table {
  */
 /*
  *
- * Balls
- *
- */
-.ball {
-  position: absolute;
-  z-index: 2147483647;
-  border-radius: 100%;
-}
-
-/*
- *
  * Buttons
  *
  */
-.btn {
-  display: inline-block;
-  border-radius: .5rem;
-  background-color: #ffb700;
-  padding-top: 8px;
-  padding-top: .5rem;
-  padding-bottom: 8px;
-  padding-bottom: .5rem;
-  padding-left: 16px;
-  padding-left: 1rem;
-  padding-right: 16px;
-  padding-right: 1rem;
-  color: #fff;
-  -webkit-transition: all 0.15s ease-in-out;
-  transition: all 0.15s ease-in-out;
-}
-
-.btn:hover,
-.btn:focus {
-  background-color: #ff4136;
-}
-
 /*
  *
  * Containers
@@ -846,6 +820,62 @@ table {
   font-size: 1rem;
   text-transform: uppercase;
   letter-spacing: .1em;
+}
+
+/*
+ *
+ * Links
+ *
+ */
+.link {
+  -webkit-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, .11), 0 5px 15px 0 rgba(0, 0, 0, .08);
+          box-shadow: 0 15px 30px 0 rgba(0, 0, 0, .11), 0 5px 15px 0 rgba(0, 0, 0, .08);
+  border-width: 2px;
+  border-width: .125rem;
+  border-color: #000;
+  background-color: #000;
+  padding-top: 8px;
+  padding-top: .5rem;
+  padding-bottom: 8px;
+  padding-bottom: .5rem;
+  padding-left: 16px;
+  padding-left: 1rem;
+  padding-right: 16px;
+  padding-right: 1rem;
+  line-height: 1.7;
+  text-transform: uppercase;
+  letter-spacing: .1em;
+  color: #fff;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+  border-radius: 30px;
+}
+
+.link:hover,
+.link:focus {
+  border-color: rgba(46, 236, 150, .9);;
+  background-color: rgba(46, 236, 150, .9);;
+  color: #000;
+}
+
+.link-white:hover,
+.link-white:focus {
+  border-color: #fff;
+  background-color: #fff;
+  color: #000;
+}
+
+.link-inline {
+  -webkit-box-shadow: inset 0 -3px 0px 0px rgba(46, 236, 150, .9);
+          box-shadow: inset 0 -3px 0px 0px rgba(46, 236, 150, .9);
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.link-inline:hover,
+.link-inline:focus {
+  -webkit-box-shadow: inset 0 -10px 0px 0px rgba(46, 236, 150, .9);
+          box-shadow: inset 0 -10px 0px 0px rgba(46, 236, 150, .9);
 }
 
 /*
@@ -1114,7 +1144,7 @@ table {
 }
 
 .bg-green {
-  background-color: #19a974;
+  background-color: rgba(46, 236, 150, .9);;
 }
 
 .bg-light-green {
@@ -1362,7 +1392,7 @@ table {
 }
 
 .hover\:bg-green:hover {
-  background-color: #19a974;
+  background-color: rgba(46, 236, 150, .9);;
 }
 
 .hover\:bg-light-green:hover {
@@ -1670,7 +1700,7 @@ table {
 }
 
 .b--green {
-  border-color: #19a974;
+  border-color: rgba(46, 236, 150, .9);;
 }
 
 .b--light-green {
@@ -1918,7 +1948,7 @@ table {
 }
 
 .hover\:b--green:hover {
-  border-color: #19a974;
+  border-color: rgba(46, 236, 150, .9);;
 }
 
 .hover\:b--light-green:hover {
@@ -2357,31 +2387,31 @@ table {
   border-style: none;
 }
 
-.bw-0 {
+.bw0 {
   border-width: 0;
 }
 
-.bw-1 {
+.bw1 {
   border-width: 2px;
   border-width: .125rem;
 }
 
-.bw-2 {
+.bw2 {
   border-width: 4px;
   border-width: .25rem;
 }
 
-.bw-3 {
+.bw3 {
   border-width: 8px;
   border-width: .5rem;
 }
 
-.bw-4 {
+.bw4 {
   border-width: 16px;
   border-width: 1rem;
 }
 
-.bw-5 {
+.bw5 {
   border-width: 32px;
   border-width: 2rem;
 }
@@ -2506,19 +2536,19 @@ table {
   border-left-width: 2rem;
 }
 
-.bt {
+.bt- {
   border-top-width: 1px;
 }
 
-.br {
+.br- {
   border-right-width: 1px;
 }
 
-.bb {
+.bb- {
   border-bottom-width: 1px;
 }
 
-.bl {
+.bl- {
   border-left-width: 1px;
 }
 
@@ -2942,6 +2972,18 @@ table {
   font-weight: bold;
 }
 
+.h-auto {
+  height: auto;
+}
+
+.h-inherit {
+  height: inherit;
+}
+
+.h-px {
+  height: 1px;
+}
+
 .h1 {
   height: 16px;
   height: 1rem;
@@ -2967,18 +3009,6 @@ table {
   height: 16rem;
 }
 
-.h-auto {
-  height: auto;
-}
-
-.h-inherit {
-  height: inherit;
-}
-
-.h-px {
-  height: 1px;
-}
-
 .h-25 {
   height: 25%;
 }
@@ -2995,19 +3025,19 @@ table {
   height: 100%;
 }
 
-.hvh-25 {
+.vh-25 {
   height: 25vh;
 }
 
-.hvh-50 {
+.vh-50 {
   height: 50vh;
 }
 
-.hvh-75 {
+.vh-75 {
   height: 75vh;
 }
 
-.hvh-100 {
+.vh-100 {
   height: 100vh;
 }
 
@@ -3455,15 +3485,15 @@ table {
   max-width: 100%;
 }
 
-.min-h-0 {
+.min-0 {
   min-height: 0;
 }
 
-.min-h-100 {
+.min-100 {
   min-height: 100%;
 }
 
-.min-h-vh100 {
+.min-vh-100 {
   min-height: 100vh;
 }
 
@@ -4550,7 +4580,7 @@ table {
 }
 
 .green {
-  color: #19a974;
+  color: rgba(46, 236, 150, .9);;
 }
 
 .light-green {
@@ -4794,7 +4824,7 @@ table {
 }
 
 .hover\:green:hover {
-  color: #19a974;
+  color: rgba(46, 236, 150, .9);;
 }
 
 .hover\:light-green:hover {
@@ -5246,8 +5276,8 @@ table {
  *
  */
 .animate {
-  -webkit-transition: all 0.15s ease-in-out;
-  transition: all 0.15s ease-in-out;
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
 }
 
 /*
@@ -5431,6 +5461,63 @@ table {
 
 /*
  *
+ * Tailwinds shadows
+ *
+ */
+.shadow {
+  -webkit-box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+          box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .1);
+}
+
+.shadow-md {
+  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .12), 0 2px 4px 0 rgba(0, 0, 0, .08);
+          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, .12), 0 2px 4px 0 rgba(0, 0, 0, .08);
+}
+
+.shadow-lg {
+  -webkit-box-shadow: 0 15px 30px 0 rgba(0, 0, 0, .11), 0 5px 15px 0 rgba(0, 0, 0, .08);
+          box-shadow: 0 15px 30px 0 rgba(0, 0, 0, .11), 0 5px 15px 0 rgba(0, 0, 0, .08);
+}
+
+/*
+ *
+ * Other shadows
+ *
+ */
+.hover-shadow:focus,
+.hover-shadow:hover {
+  -webkit-box-shadow: 10px 10px 8px 0px rgba(0, 0, 0, .2);
+          box-shadow: 10px 10px 8px 0px rgba(0, 0, 0, .2);
+}
+
+.medium-shadow {
+  -webkit-box-shadow: 0 12px 24px 0 rgba(0, 0, 0, .1);
+          box-shadow: 0 12px 24px 0 rgba(0, 0, 0, .1);
+}
+
+.larger-shadow {
+  -webkit-box-shadow: 0 16px 24px 0 rgba(0, 0, 0, .3);
+          box-shadow: 0 16px 24px 0 rgba(0, 0, 0, .3);
+}
+
+.deep-shadow {
+  -webkit-box-shadow: 25px 32px 85px 0 rgba(0, 0, 0, .4);
+          box-shadow: 25px 32px 85px 0 rgba(0, 0, 0, .4);
+}
+
+.hover-deep-shadow:focus,
+.hover-deep-shadow:hover {
+  -webkit-box-shadow: 25px 32px 85px 0 rgba(0, 0, 0, .4);
+          box-shadow: 25px 32px 85px 0 rgba(0, 0, 0, .4);
+}
+
+.deep-shadow--reverse {
+  -webkit-box-shadow: 0px 32px 85px 0 rgba(0, 0, 0, .4);
+          box-shadow: 0px 32px 85px 0 rgba(0, 0, 0, .4);
+}
+
+/*
+ *
  * Overflow
  *
  */
@@ -5450,9 +5537,74 @@ table {
  */
 /*
  *
+ * Font Size
+ *
+ */
+.f-18px {
+  font-size: 16.8px;
+  font-size: 1.05rem;
+}
+
+/*
+ *
+ * Line Height
+ *
+ */
+.lh-tall {
+  line-height: 1.7;
+}
+
+/*
+ *
+ * Line Length
+ *
+ */
+.measure {
+  max-width: 66ch;
+}
+
+.measure-narrow {
+  max-width: 45ch;
+}
+
+.measure-wide {
+  max-width: 80ch;
+}
+
+.pre-line {
+  white-space: pre-line;
+}
+
+/*
+ *
+ * Letter Spacing
+ *
+ */
+.tracked-slight {
+  letter-spacing: .025em;
+}
+
+/*
+ *
+ * Text Decoration
+ *
+ */
+.custom-underline {
+  -webkit-box-shadow: inset 0 -3px 0px 0px rgba(46, 236, 150, .9);
+          box-shadow: inset 0 -3px 0px 0px rgba(46, 236, 150, .9);
+}
+
+.hover-custom-underline {
+  -webkit-box-shadow: inset 0 -10px 0px 0px rgba(46, 236, 150, .9);
+          box-shadow: inset 0 -10px 0px 0px rgba(46, 236, 150, .9);
+}
+
+/*
+ *
  * Supports
  *
  */
+
 @media (min-width: 36em) {
   .sm\:list-reset {
     list-style: none;
@@ -5682,7 +5834,7 @@ table {
   }
 
   .sm\:bg-green {
-    background-color: #19a974;
+    background-color: rgba(46, 236, 150, .9);;
   }
 
   .sm\:bg-light-green {
@@ -5930,7 +6082,7 @@ table {
   }
 
   .sm\:hover\:bg-green:hover {
-    background-color: #19a974;
+    background-color: rgba(46, 236, 150, .9);;
   }
 
   .sm\:hover\:bg-light-green:hover {
@@ -6238,7 +6390,7 @@ table {
   }
 
   .sm\:b--green {
-    border-color: #19a974;
+    border-color: rgba(46, 236, 150, .9);;
   }
 
   .sm\:b--light-green {
@@ -6486,7 +6638,7 @@ table {
   }
 
   .sm\:hover\:b--green:hover {
-    border-color: #19a974;
+    border-color: rgba(46, 236, 150, .9);;
   }
 
   .sm\:hover\:b--light-green:hover {
@@ -6865,27 +7017,27 @@ table {
     border-style: none;
   }
 
-  .sm\:bw-0 {
+  .sm\:bw0 {
     border-width: 0;
   }
 
-  .sm\:bw-1 {
+  .sm\:bw1 {
     border-width: .125rem;
   }
 
-  .sm\:bw-2 {
+  .sm\:bw2 {
     border-width: .25rem;
   }
 
-  .sm\:bw-3 {
+  .sm\:bw3 {
     border-width: .5rem;
   }
 
-  .sm\:bw-4 {
+  .sm\:bw4 {
     border-width: 1rem;
   }
 
-  .sm\:bw-5 {
+  .sm\:bw5 {
     border-width: 2rem;
   }
 
@@ -6989,19 +7141,19 @@ table {
     border-left-width: 2rem;
   }
 
-  .sm\:bt {
+  .sm\:bt- {
     border-top-width: 1px;
   }
 
-  .sm\:br {
+  .sm\:br- {
     border-right-width: 1px;
   }
 
-  .sm\:bb {
+  .sm\:bb- {
     border-bottom-width: 1px;
   }
 
-  .sm\:bl {
+  .sm\:bl- {
     border-left-width: 1px;
   }
 
@@ -7425,6 +7577,18 @@ table {
     font-weight: bold;
   }
 
+  .sm\:h-auto {
+    height: auto;
+  }
+
+  .sm\:h-inherit {
+    height: inherit;
+  }
+
+  .sm\:h-px {
+    height: 1px;
+  }
+
   .sm\:h1 {
     height: 1rem;
   }
@@ -7445,18 +7609,6 @@ table {
     height: 16rem;
   }
 
-  .sm\:h-auto {
-    height: auto;
-  }
-
-  .sm\:h-inherit {
-    height: inherit;
-  }
-
-  .sm\:h-px {
-    height: 1px;
-  }
-
   .sm\:h-25 {
     height: 25%;
   }
@@ -7473,19 +7625,19 @@ table {
     height: 100%;
   }
 
-  .sm\:hvh-25 {
+  .sm\:vh-25 {
     height: 25vh;
   }
 
-  .sm\:hvh-50 {
+  .sm\:vh-50 {
     height: 50vh;
   }
 
-  .sm\:hvh-75 {
+  .sm\:vh-75 {
     height: 75vh;
   }
 
-  .sm\:hvh-100 {
+  .sm\:vh-100 {
     height: 100vh;
   }
 
@@ -7861,15 +8013,15 @@ table {
     max-width: 100%;
   }
 
-  .sm\:min-h-0 {
+  .sm\:min-0 {
     min-height: 0;
   }
 
-  .sm\:min-h-100 {
+  .sm\:min-100 {
     min-height: 100%;
   }
 
-  .sm\:min-h-vh100 {
+  .sm\:min-vh-100 {
     min-height: 100vh;
   }
 
@@ -8822,7 +8974,7 @@ table {
   }
 
   .sm\:green {
-    color: #19a974;
+    color: rgba(46, 236, 150, .9);;
   }
 
   .sm\:light-green {
@@ -9066,7 +9218,7 @@ table {
   }
 
   .sm\:hover\:green:hover {
-    color: #19a974;
+    color: rgba(46, 236, 150, .9);;
   }
 
   .sm\:hover\:light-green:hover {
@@ -9752,7 +9904,7 @@ table {
   }
 
   .md\:bg-green {
-    background-color: #19a974;
+    background-color: rgba(46, 236, 150, .9);;
   }
 
   .md\:bg-light-green {
@@ -10000,7 +10152,7 @@ table {
   }
 
   .md\:hover\:bg-green:hover {
-    background-color: #19a974;
+    background-color: rgba(46, 236, 150, .9);;
   }
 
   .md\:hover\:bg-light-green:hover {
@@ -10308,7 +10460,7 @@ table {
   }
 
   .md\:b--green {
-    border-color: #19a974;
+    border-color: rgba(46, 236, 150, .9);;
   }
 
   .md\:b--light-green {
@@ -10556,7 +10708,7 @@ table {
   }
 
   .md\:hover\:b--green:hover {
-    border-color: #19a974;
+    border-color: rgba(46, 236, 150, .9);;
   }
 
   .md\:hover\:b--light-green:hover {
@@ -10935,27 +11087,27 @@ table {
     border-style: none;
   }
 
-  .md\:bw-0 {
+  .md\:bw0 {
     border-width: 0;
   }
 
-  .md\:bw-1 {
+  .md\:bw1 {
     border-width: .125rem;
   }
 
-  .md\:bw-2 {
+  .md\:bw2 {
     border-width: .25rem;
   }
 
-  .md\:bw-3 {
+  .md\:bw3 {
     border-width: .5rem;
   }
 
-  .md\:bw-4 {
+  .md\:bw4 {
     border-width: 1rem;
   }
 
-  .md\:bw-5 {
+  .md\:bw5 {
     border-width: 2rem;
   }
 
@@ -11059,19 +11211,19 @@ table {
     border-left-width: 2rem;
   }
 
-  .md\:bt {
+  .md\:bt- {
     border-top-width: 1px;
   }
 
-  .md\:br {
+  .md\:br- {
     border-right-width: 1px;
   }
 
-  .md\:bb {
+  .md\:bb- {
     border-bottom-width: 1px;
   }
 
-  .md\:bl {
+  .md\:bl- {
     border-left-width: 1px;
   }
 
@@ -11495,6 +11647,18 @@ table {
     font-weight: bold;
   }
 
+  .md\:h-auto {
+    height: auto;
+  }
+
+  .md\:h-inherit {
+    height: inherit;
+  }
+
+  .md\:h-px {
+    height: 1px;
+  }
+
   .md\:h1 {
     height: 1rem;
   }
@@ -11515,18 +11679,6 @@ table {
     height: 16rem;
   }
 
-  .md\:h-auto {
-    height: auto;
-  }
-
-  .md\:h-inherit {
-    height: inherit;
-  }
-
-  .md\:h-px {
-    height: 1px;
-  }
-
   .md\:h-25 {
     height: 25%;
   }
@@ -11543,19 +11695,19 @@ table {
     height: 100%;
   }
 
-  .md\:hvh-25 {
+  .md\:vh-25 {
     height: 25vh;
   }
 
-  .md\:hvh-50 {
+  .md\:vh-50 {
     height: 50vh;
   }
 
-  .md\:hvh-75 {
+  .md\:vh-75 {
     height: 75vh;
   }
 
-  .md\:hvh-100 {
+  .md\:vh-100 {
     height: 100vh;
   }
 
@@ -11931,15 +12083,15 @@ table {
     max-width: 100%;
   }
 
-  .md\:min-h-0 {
+  .md\:min-0 {
     min-height: 0;
   }
 
-  .md\:min-h-100 {
+  .md\:min-100 {
     min-height: 100%;
   }
 
-  .md\:min-h-vh100 {
+  .md\:min-vh-100 {
     min-height: 100vh;
   }
 
@@ -12892,7 +13044,7 @@ table {
   }
 
   .md\:green {
-    color: #19a974;
+    color: rgba(46, 236, 150, .9);;
   }
 
   .md\:light-green {
@@ -13136,7 +13288,7 @@ table {
   }
 
   .md\:hover\:green:hover {
-    color: #19a974;
+    color: rgba(46, 236, 150, .9);;
   }
 
   .md\:hover\:light-green:hover {
@@ -13822,7 +13974,7 @@ table {
   }
 
   .lg\:bg-green {
-    background-color: #19a974;
+    background-color: rgba(46, 236, 150, .9);;
   }
 
   .lg\:bg-light-green {
@@ -14070,7 +14222,7 @@ table {
   }
 
   .lg\:hover\:bg-green:hover {
-    background-color: #19a974;
+    background-color: rgba(46, 236, 150, .9);;
   }
 
   .lg\:hover\:bg-light-green:hover {
@@ -14378,7 +14530,7 @@ table {
   }
 
   .lg\:b--green {
-    border-color: #19a974;
+    border-color: rgba(46, 236, 150, .9);;
   }
 
   .lg\:b--light-green {
@@ -14626,7 +14778,7 @@ table {
   }
 
   .lg\:hover\:b--green:hover {
-    border-color: #19a974;
+    border-color: rgba(46, 236, 150, .9);;
   }
 
   .lg\:hover\:b--light-green:hover {
@@ -15005,27 +15157,27 @@ table {
     border-style: none;
   }
 
-  .lg\:bw-0 {
+  .lg\:bw0 {
     border-width: 0;
   }
 
-  .lg\:bw-1 {
+  .lg\:bw1 {
     border-width: .125rem;
   }
 
-  .lg\:bw-2 {
+  .lg\:bw2 {
     border-width: .25rem;
   }
 
-  .lg\:bw-3 {
+  .lg\:bw3 {
     border-width: .5rem;
   }
 
-  .lg\:bw-4 {
+  .lg\:bw4 {
     border-width: 1rem;
   }
 
-  .lg\:bw-5 {
+  .lg\:bw5 {
     border-width: 2rem;
   }
 
@@ -15129,19 +15281,19 @@ table {
     border-left-width: 2rem;
   }
 
-  .lg\:bt {
+  .lg\:bt- {
     border-top-width: 1px;
   }
 
-  .lg\:br {
+  .lg\:br- {
     border-right-width: 1px;
   }
 
-  .lg\:bb {
+  .lg\:bb- {
     border-bottom-width: 1px;
   }
 
-  .lg\:bl {
+  .lg\:bl- {
     border-left-width: 1px;
   }
 
@@ -15565,6 +15717,18 @@ table {
     font-weight: bold;
   }
 
+  .lg\:h-auto {
+    height: auto;
+  }
+
+  .lg\:h-inherit {
+    height: inherit;
+  }
+
+  .lg\:h-px {
+    height: 1px;
+  }
+
   .lg\:h1 {
     height: 1rem;
   }
@@ -15585,18 +15749,6 @@ table {
     height: 16rem;
   }
 
-  .lg\:h-auto {
-    height: auto;
-  }
-
-  .lg\:h-inherit {
-    height: inherit;
-  }
-
-  .lg\:h-px {
-    height: 1px;
-  }
-
   .lg\:h-25 {
     height: 25%;
   }
@@ -15613,19 +15765,19 @@ table {
     height: 100%;
   }
 
-  .lg\:hvh-25 {
+  .lg\:vh-25 {
     height: 25vh;
   }
 
-  .lg\:hvh-50 {
+  .lg\:vh-50 {
     height: 50vh;
   }
 
-  .lg\:hvh-75 {
+  .lg\:vh-75 {
     height: 75vh;
   }
 
-  .lg\:hvh-100 {
+  .lg\:vh-100 {
     height: 100vh;
   }
 
@@ -16001,15 +16153,15 @@ table {
     max-width: 100%;
   }
 
-  .lg\:min-h-0 {
+  .lg\:min-0 {
     min-height: 0;
   }
 
-  .lg\:min-h-100 {
+  .lg\:min-100 {
     min-height: 100%;
   }
 
-  .lg\:min-h-vh100 {
+  .lg\:min-vh-100 {
     min-height: 100vh;
   }
 
@@ -16962,7 +17114,7 @@ table {
   }
 
   .lg\:green {
-    color: #19a974;
+    color: rgba(46, 236, 150, .9);;
   }
 
   .lg\:light-green {
@@ -17206,7 +17358,7 @@ table {
   }
 
   .lg\:hover\:green:hover {
-    color: #19a974;
+    color: rgba(46, 236, 150, .9);;
   }
 
   .lg\:hover\:light-green:hover {
@@ -17892,7 +18044,7 @@ table {
   }
 
   .xl\:bg-green {
-    background-color: #19a974;
+    background-color: rgba(46, 236, 150, .9);;
   }
 
   .xl\:bg-light-green {
@@ -18140,7 +18292,7 @@ table {
   }
 
   .xl\:hover\:bg-green:hover {
-    background-color: #19a974;
+    background-color: rgba(46, 236, 150, .9);;
   }
 
   .xl\:hover\:bg-light-green:hover {
@@ -18448,7 +18600,7 @@ table {
   }
 
   .xl\:b--green {
-    border-color: #19a974;
+    border-color: rgba(46, 236, 150, .9);;
   }
 
   .xl\:b--light-green {
@@ -18696,7 +18848,7 @@ table {
   }
 
   .xl\:hover\:b--green:hover {
-    border-color: #19a974;
+    border-color: rgba(46, 236, 150, .9);;
   }
 
   .xl\:hover\:b--light-green:hover {
@@ -19075,27 +19227,27 @@ table {
     border-style: none;
   }
 
-  .xl\:bw-0 {
+  .xl\:bw0 {
     border-width: 0;
   }
 
-  .xl\:bw-1 {
+  .xl\:bw1 {
     border-width: .125rem;
   }
 
-  .xl\:bw-2 {
+  .xl\:bw2 {
     border-width: .25rem;
   }
 
-  .xl\:bw-3 {
+  .xl\:bw3 {
     border-width: .5rem;
   }
 
-  .xl\:bw-4 {
+  .xl\:bw4 {
     border-width: 1rem;
   }
 
-  .xl\:bw-5 {
+  .xl\:bw5 {
     border-width: 2rem;
   }
 
@@ -19199,19 +19351,19 @@ table {
     border-left-width: 2rem;
   }
 
-  .xl\:bt {
+  .xl\:bt- {
     border-top-width: 1px;
   }
 
-  .xl\:br {
+  .xl\:br- {
     border-right-width: 1px;
   }
 
-  .xl\:bb {
+  .xl\:bb- {
     border-bottom-width: 1px;
   }
 
-  .xl\:bl {
+  .xl\:bl- {
     border-left-width: 1px;
   }
 
@@ -19635,6 +19787,18 @@ table {
     font-weight: bold;
   }
 
+  .xl\:h-auto {
+    height: auto;
+  }
+
+  .xl\:h-inherit {
+    height: inherit;
+  }
+
+  .xl\:h-px {
+    height: 1px;
+  }
+
   .xl\:h1 {
     height: 1rem;
   }
@@ -19655,18 +19819,6 @@ table {
     height: 16rem;
   }
 
-  .xl\:h-auto {
-    height: auto;
-  }
-
-  .xl\:h-inherit {
-    height: inherit;
-  }
-
-  .xl\:h-px {
-    height: 1px;
-  }
-
   .xl\:h-25 {
     height: 25%;
   }
@@ -19683,19 +19835,19 @@ table {
     height: 100%;
   }
 
-  .xl\:hvh-25 {
+  .xl\:vh-25 {
     height: 25vh;
   }
 
-  .xl\:hvh-50 {
+  .xl\:vh-50 {
     height: 50vh;
   }
 
-  .xl\:hvh-75 {
+  .xl\:vh-75 {
     height: 75vh;
   }
 
-  .xl\:hvh-100 {
+  .xl\:vh-100 {
     height: 100vh;
   }
 
@@ -20071,15 +20223,15 @@ table {
     max-width: 100%;
   }
 
-  .xl\:min-h-0 {
+  .xl\:min-0 {
     min-height: 0;
   }
 
-  .xl\:min-h-100 {
+  .xl\:min-100 {
     min-height: 100%;
   }
 
-  .xl\:min-h-vh100 {
+  .xl\:min-vh-100 {
     min-height: 100vh;
   }
 
@@ -21032,7 +21184,7 @@ table {
   }
 
   .xl\:green {
-    color: #19a974;
+    color: rgba(46, 236, 150, .9);;
   }
 
   .xl\:light-green {
@@ -21276,7 +21428,7 @@ table {
   }
 
   .xl\:hover\:green:hover {
-    color: #19a974;
+    color: rgba(46, 236, 150, .9);;
   }
 
   .xl\:hover\:light-green:hover {
@@ -21732,3 +21884,4 @@ table {
     left: 50%;
   }
 }
+/*# sourceMappingURL=main.css.map */
