--- a/src/styles/utilities/_shadows.sass
+++ b/src/styles/utilities/_shadows.sass
@@ -1,20 +1,40 @@
-// .hover-shadow:focus,
-// .hover-shadow:hover
-//   box-shadow: 10px 10px 8px 0px rgba(0, 0, 0, .2)
+/*
+ *
+ * Tailwinds shadows
+ *
+ */
 
-// .medium-shadow
-//   box-shadow: 0 12px 24px 0 rgba(0,0,0,.1)
+.shadow	
+  box-shadow: 0 2px 4px 0 rgba(0,0,0,0.10);
 
-// .hover-larger-shadow:focus
-// .hover-larger-shadow:hover
-//   box-shadow: 0 16px 24px 0 rgba(0,0,0,.3)
+.shadow-md	
+  box-shadow: 0 4px 8px 0 rgba(0,0,0,0.12), 0 2px 4px 0 rgba(0,0,0,0.08);
 
-// .deep-shadow
-//   box-shadow: 25px 32px 85px 0 rgba(0,0,0,.4)
+.shadow-lg
+  box-shadow: 0 15px 30px 0 rgba(0,0,0,0.11), 0 5px 15px 0 rgba(0,0,0,0.08);
 
-// .hover-deep-shadow:focus,
-// .hover-deep-shadow:hover
-//   box-shadow: 25px 32px 85px 0 rgba(0,0,0,.4)
+/*
+ *
+ * Other shadows
+ *
+ */
 
-// .deep-shadow--reverse
-//   box-shadow: 0px 32px 85px 0 rgba(0,0,0,.4)
+.hover-shadow:focus,
+.hover-shadow:hover
+  box-shadow: 10px 10px 8px 0px rgba(0, 0, 0, .2)
+
+.medium-shadow
+  box-shadow: 0 12px 24px 0 rgba(0,0,0,.1)
+
+.larger-shadow
+  box-shadow: 0 16px 24px 0 rgba(0,0,0,.3)
+
+.deep-shadow
+  box-shadow: 25px 32px 85px 0 rgba(0,0,0,.4)
+
+.hover-deep-shadow:focus,
+.hover-deep-shadow:hover
+  box-shadow: 25px 32px 85px 0 rgba(0,0,0,.4)
+
+.deep-shadow--reverse
+  box-shadow: 0px 32px 85px 0 rgba(0,0,0,.4)
