--- a/src/styles/utilities/_animations.sass
+++ b/src/styles/utilities/_animations.sass
@@ -13,10 +13,10 @@
  *
  */
 
-.goofy
-  &:hover,
-  &:focus
-    transform: scale(1.3) rotateX(-20deg) rotateY(10deg)
+// .goofy
+//   &:hover,
+//   &:focus
+//     transform: scale(1.05) rotateX(-20deg) rotateY(10deg)
 
 .goofy:hover span
   display: inline-block
@@ -28,21 +28,9 @@
 .goofy:hover span:nth-child(even)
   animation-delay: 0.15s
 
-// .anim-vertical
-//   animation: anim-vertical 8s ease-in-out 1.5s infinite alternate
-
-// .anim-horizontal
-//   animation: anim-horizontal 11s ease-in-out 1.5s infinite alternate
-
-// .anim-diagonal-right
-//   animation: anim-diagonal-right 13s ease-in-out 1.5s infinite alternate
-
-// .anim-diagonal-left
-//   animation: anim-diagonal-left 15s ease-in-out 1.5s infinite alternate
-
 /* 
  *
- * Ball Keyframes
+ * Keyframes
  *
  */
 
@@ -56,29 +44,3 @@
   to
     transform: translate(0, 0px) rotate(-12deg)
     text-shadow: 10px 10px 3px rgba(0,0,0,0.1)
-
-// @keyframes anim-vertical
-//   0%
-//     transform: matrix(1, 0, 0, 1, 0, 0)
-//   100%
-//     transform: matrix(-1, 0, 0, -1, 0, -80)
-
-// @keyframes anim-horizontal
-//   0%
-//     transform: matrix(1, 0, 0, 1, 0, 0)
-//   100%
-//     transform: matrix(-1, 0, 0, -1, -80, 0)
-
-// @keyframes anim-diagonal-right
-//   0%
-//     transform: matrix(1, 0, 0, 1, 0, 0)
-//   100%
-//     transform: matrix(-1, 0, 0, -1, 80, -80)
-
-// @keyframes anim-diagonal-left
-//   0%
-//     transform: matrix(1, 0, 0, 1, 0, 0)
-//   100%
-//     transform: matrix(-1, 0, 0, -1, -80, -80)
-
-
