--- a/src/styles/utilities/_typography.sass
+++ b/src/styles/utilities/_typography.sass
@@ -7,6 +7,10 @@
 // see: https://css-tricks.com/font-size-viewport-units/
 $fluid: calc(1vw + 1vh + .5vmin)
 
+@responsive
+  .f-4
+    font-size: 4rem
+
 /*
  *
  * Line Height
