--- a/src/styles/builds/after-postcss/main.css
+++ b/src/styles/builds/after-postcss/main.css
@@ -899,14 +899,32 @@ table {
           box-shadow: inset 0 -10px 0px 0px rgba(46, 236, 150, .9);
 }
 
-.link-icon {
+/*
+ *
+ * Icons
+ *
+ */
+.icon {
   -webkit-transition: all 0.2s ease-in-out;
   transition: all 0.2s ease-in-out;
 }
 
-.link-icon:hover,
-.link-icon:focus {
+.icon:hover,
+.icon:focus {
   color: rgba(46, 236, 150, .9);;
+}
+
+.icon-on-green {
+  -webkit-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
+
+.icon-on-green:hover,
+.icon-on-green:focus {
+  color: #fff;
+  filter: url('data:image/svg+xml;charset=utf-8,<svg xmlns="http://www.w3.org/2000/svg"><filter id="filter"><feGaussianBlur in="SourceAlpha" stdDeviation="5" /><feOffset dx="1" dy="16" result="offsetblur" /><feFlood flood-color="rgba(0,0,0,0.11)" /><feComposite in2="offsetblur" operator="in" /><feMerge><feMergeNode /><feMergeNode in="SourceGraphic" /></feMerge></filter></svg>#filter');
+  -webkit-filter: drop-shadow(0px 15px 5px rgba(0, 0, 0, .11));
+          filter: drop-shadow(0px 15px 5px rgba(0, 0, 0, .11));
 }
 
 /*
@@ -5316,12 +5334,6 @@ table {
  * Heading Animations
  *
  */
-.goofy:hover,
-.goofy:focus {
-  -webkit-transform: scale(1.3) rotateX(-20deg) rotateY(10deg);
-          transform: scale(1.3) rotateX(-20deg) rotateY(10deg);
-}
-
 .goofy:hover span {
   display: inline-block;
   -webkit-animation-name: dance;
@@ -5341,7 +5353,7 @@ table {
 
 /*
  *
- * Ball Keyframes
+ * Keyframes
  *
  */
 @-webkit-keyframes dance {
@@ -5518,6 +5530,11 @@ table {
  * Font Size
  *
  */
+.f-4 {
+  font-size: 64px;
+  font-size: 4rem;
+}
+
 /*
  *
  * Line Height
@@ -9646,6 +9663,10 @@ table {
   .sm\:left-50 {
     left: 50%;
   }
+
+  .sm\:f-4 {
+    font-size: 4rem;
+  }
 }
 
 @media (min-width: 48em) {
@@ -13715,6 +13736,10 @@ table {
 
   .md\:left-50 {
     left: 50%;
+  }
+
+  .md\:f-4 {
+    font-size: 4rem;
   }
 }
 
@@ -17786,6 +17811,10 @@ table {
   .lg\:left-50 {
     left: 50%;
   }
+
+  .lg\:f-4 {
+    font-size: 4rem;
+  }
 }
 
 @media (min-width: 75em) {
@@ -21855,6 +21884,10 @@ table {
 
   .xl\:left-50 {
     left: 50%;
+  }
+
+  .xl\:f-4 {
+    font-size: 4rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
