--- a/src/styles/builds/after-sass/main.css
+++ b/src/styles/builds/after-sass/main.css
@@ -291,10 +291,20 @@ table {
   .link-inline:hover, .link-inline:focus {
     @apply .hover-custom-underline {} }
 
-.link-icon {
+/*
+ *
+ * Icons
+ *
+ */
+.icon {
   @apply .animate {} }
-  .link-icon:hover, .link-icon:focus {
+  .icon:hover, .icon:focus {
     @apply .green {} }
+
+.icon-on-green {
+  @apply .animate {} }
+  .icon-on-green:hover, .icon-on-green:focus {
+    @apply .white {}    filter: drop-shadow(0px 15px 5px rgba(0, 0, 0, 0.11)); }
 
 /*
  *
@@ -319,9 +329,6 @@ table {
  * Heading Animations
  *
  */
-.goofy:hover, .goofy:focus {
-  transform: scale(1.3) rotateX(-20deg) rotateY(10deg); }
-
 .goofy:hover span {
   display: inline-block;
   animation-name: dance;
@@ -334,7 +341,7 @@ table {
 
 /*
  *
- * Ball Keyframes
+ * Keyframes
  *
  */
 @keyframes dance {
@@ -446,6 +453,10 @@ table {
  * Font Size
  *
  */
+@responsive {
+  .f-4 {
+    font-size: 4rem; } }
+
 /*
  *
  * Line Height
