--- a/src/styles/supports/grid.css
+++ b/src/styles/supports/grid.css
@@ -19,21 +19,23 @@
     
     .hero-grid {
       /* Grid styles */
-      display: grid
-      grid-template-columns: 3fr 2fr
-      align-items: center
+      display: grid;
+      grid-template-columns: 3fr 2fr;
+      align-items: center;
     
       /* Resets for margins/widths */
-      max-width: 96rem
+      max-width: 96rem;
 
-      & > figure
-        margin: 0
-        padding-top: 0
-        max-width: 100%
+      & > figure {
+        margin: 0;
+        padding-top: 0;
+        max-width: 100%;
+      }
 
-      & > figure > div > div
-        width: auto
-        margin: 0
+      & > figure > div > div {
+        width: auto;
+        margin: 0;
+      }
     }
   }
 }
