--- a/src/styles/components/components.css
+++ b/src/styles/components/components.css
@@ -13,7 +13,7 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
 .btn { 
   @apply .bw1 .b--black .bg-black .green .pv2 .ph3 .lh-solid .ttu .tracked .animate;
 
-  &:hover, &:focus { @apply .bg-green .black }
+  &:hover { @apply .bg-green .black }
 
   @media (--sm) { @apply .f4 }
  }
@@ -51,14 +51,15 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
 .icon { 
   @apply .animate;
 
-  &:hover, &:focus { @apply .green }
+  &:hover { @apply .green }
 }
 
 .icon-on-green { 
   @apply .animate;
 
-  &:hover, &:focus {
+  &:hover {
     @apply .white;
+
     filter: drop-shadow( 0px 15px 5px rgba(0, 0, 0, 0.11) )
   }
 
@@ -71,30 +72,28 @@ See: https://tailwindcss.com/docs/extracting-components#extracting-utility-patte
  */
 
 .link {
-  @apply .shadow-lg .bw1 .b--black .bg-black .pv2 .ph3 .lh-tall .ttu .tracked .white .animate;
+  @apply .shadow-lg .bw1 .b--green .bg-green .pv-p75r .ph3 .ttu .tracked .black .animate;
+
   border-radius: 30px;
 
-  &:hover, &:focus { @apply .b--green .bg-green .black }
+  &:hover { @apply .b--black .bg-black .white }
+}
+
+.link-black {
+  @apply .b--black .bg-black .white;
+  &:hover { @apply .b--white .bg-white .black }
 }
 
 .link-white {
-  &:hover, &:focus { @apply .b--white .bg-white .black }
+  @apply .b--white .bg-white .black;
+  &:hover { @apply .b--black .bg-black .white }
 }
 
 .link-inline { 
   @apply .animate;
+
   border-bottom: 1px solid var(--green);
   box-shadow: inset 0 -2px 0px 0px var(--green);
 
-  &:hover, &:focus { box-shadow: inset 0 -12px 0px 0px var(--green) }
-
-  
+  &:hover { box-shadow: inset 0 -12px 0px 0px var(--green) }
 }
-/* &:hover, &:focus { @apply .hover:fancy-underline } */
-
-
-/* 
- *
- * Sections
- *
- */
